--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ form input:focus {
 
 button {
   border: 0;
-  background: #b8bed1;
+  background: #18c0d9;
   border-radius: 20%/50%;
   padding: 13px;
   width: 14%;
