--- a/sytles.css
+++ b/sytles.css
@@ -11,7 +11,7 @@ h1 {
 }
 button {
   border: 0;
-  background: #c0d3d3;
+  background: #18c0d9;
   border-radius: 8px;
   padding: 3px;
   width: 14%;
